--- a/appsettings.json
+++ b/appsettings.json
@@ -12,5 +12,17 @@
       "Default": "Information",
       "System": "None"
     }
-  }
+  },
+  "TimePeriods": [
+    "9:00-9:30",
+    "9:30-10:00",
+    "10:00-10:30",
+    "10:30-11:00",
+    "8:30-9:00",
+    "8:00-8:30",
+    "14:00-14:30",
+    "14:30-15:00",
+    "15:00-15:30",
+    "15:30-16:00"
+  ]
 }
